# experiments

./: Cargo.toml
src/: main.rs
src/core/: Cargo.toml
src/core/src/: lib.rs
src/macros/: Cargo.toml
src/macros/src/: lib.rs
