[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mycore = { path = "./src/core" }
macros = { path = "./src/macros" }
tokio = { version = "1", features = ["macros", "rt-multi-thread" ] }

[workspace]

members = [
    ".",
    "src/*",
]

default-members = [
    ".",
    "src/*",
]